Reviewers: Return reviewers in get revision request
Summary:
To provide the information about reviewers to the client we need
to request more info from the Phabricator.
Lando API will now call the `differential.revision.search` to get more
detailed data about reviewers. Then to get the user's info Lando will call
`user.search` API.
For the use case when reviewers and users info lists are not synced Lando
will build reviewers with partial information about the user. `username`
and `real_name` fields will be set to an empty string.

Note:
Task description requested that we must not change the deprecated
Phabricator API method.
_create_commit_message is no longer calling get_user for each reviewer.
Test is added for commit message with multiple reviewers.

Nits fixed:
- Imports in `tests/factories`
- if ... return ... else in `api/revisions`

Follow up:
Give reviewers info only if requested https://trello.com/c/Mbrm6cj4/

Test Plan:
- invoke test
- Run docker-compose up and get revision from phabricator-dev.allizom.org
  revision 6 has one reviewer

Reviewers: imadueme

Bug #: 1413223

Differential Revision: https://phabricator.services.mozilla.com/D175
